# sandra

./: README.md  pyproject.toml  requirements.txt
examples/mnist/: example.ipynb
examples/sandra101/: dataset.jsonl  notebook.ipynb  sandra101.ttl
examples/toy_example_frame/: ontology.owl
sandra/: __init__.py  ontology.py  reasoner.py  situation_description.py  torch.py
sandra/tests/: test_inference.py  test_ontology.py  test_reasoner.py  test_situation_description.py  test_torch.py
tests/: test_inference.py  test_reasoner.py  test_situation_description.py
