[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sandra"
version = "1.0.0"
dependencies = [
    "rdflib>=7.0.0",
    "numpy>=1.26.2",
]

[tool.setuptools.packages.find]
exclude = ["sandra.tests"]

[project.optional-dependencies]
torch = ["torch>=2.1.1"]